<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">jPlayer</string>
    <string name="action_settings">Settings</string>
    <string name="app_developer">© Joshua Ching 2014</string>
    <string name="app_version">Version 1.3</string>
    <string name="app_name_version">jPlayer v1.3</string>
    <string name="backArrow">←</string>
    <string name="sensor">Sensor</string>
    <string name="nowPlaying">"Now Playing"</string>
    <string name="album">"album"</string>
    <string name="artist">"No mp3 files found"</string>
    <string name="startTime">"00:00</string>
    <string name="maxTime">00:00</string>
    <string name="noSongs">No mp3 files found</string>
    <string name="album_artCD">Album Art</string>
    <string name="nextCD">Next</string>
    <string name="previousCD">Previous</string>
    <string name="playCD">Play</string>
    <string name="shuffleCD">Shuffle</string>
    <string name="loopCD">Loop</string>
    <string name="goBackCD">Go Back</string>
    <string name="playlistsArtCD">Playlists Art</string>
    <string name="songPathCD">Song Path</string>
    <string name="menuCD">Menu</string>
    <string name="searchCD">Search</string>
    <string name="setFolderCD">Set Music Folder</string>
    <string name="homeCD">Home Folder</string>
    <string name="homeFolder">Go back to current Music Folder</string>
    <string name="changeThemeTitle">Current theme:</string>
    <string name="changeTheme">Change Color Theme</string>
    <string name="title">Playlists</string>
    <string name="newPlaylist">Add Playlist</string>
    <string name="allSongsTitle">Songs</string>
    <string name="search">Search</string>
    <string name="menu">Menu</string>
    <string name="navDrawerText">Menu Item</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="shuffle">Shuffle songs</string>
    <string name="loop">Loop through playlist</string>
    <string name="artists">Artists</string>
    <string name="folderBrowseTitle">Set Music Folder Path</string>
    <string name="sensorSettings">Enable device\'s sensor</string>
    <string name="sensorDescription"><i>        Enabling the device\'s sensor allows you to wave over the device\'s sensor to change songs.
        Most device\'s sensor is located at the top of the phone. </i></string>
    <string name="folderPathTitle">Music folder path: </string>
    <string name="folderPath">/Folder Path/</string>
    <string name="changeFolderPath">Set new music folder path</string>
    <string name="folderPathDescription"><i>This is where your music files are located.</i></string>
    <string name="help">Help</string>
    <string name="question1">Q: Where are all my songs?</string>
    <string name="answer1">	    A: By default, jPlayer searches for songs in a folder named \"Music\" of your device\'s internal memory.
	    You can change the path where jPlayer searches for songs in Settings.</string>
    <string name="question2">Q: How do I change songs without touching my device?</string>
    <string name="answer2">	    A: Go to Settings and check off \"Enable device\'s sensor\".
	    An alternative is to look for the following icon in the top right corner of the Now Playing screen:</string>
	<string name="answer2.1">
	    "Wave your hand over the phone's sensor to change song. Hold your hand over the phone's sensor to play/pause song."
	</string>
    <string name="question3">Q: What file types are supported by jPlayer?</string>
    <string name="answer3">A: Currently, jPlayer only supports .mp3 files.</string>
    <string name="question4">Q: Why are there so many bugs?</string>
    <string name="answer4">	    A: jPlayer is a one man project that is still in its early stages.
	    I\'m trying my best to squish all the bugs! Thanks for understanding :).</string>

    <string-array name="theme_array">
        <item>Grey</item>
        <item>Navy</item>
        <item>Turquoise</item>
        <item>Green</item>
        <item>Black</item>
        <item>Blue</item>
    </string-array>
    
    <color name="transparent">#00FFFFFF</color>
    <color name="skyBlue3">#00D5FF</color>
    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
    <color name="whiteTrans75">#BFFFFFFF</color>
    <color name="darkGray">#41433D</color>
    <color name="darkGrayTrans75">#BF41433D</color>
    <color name="darkGrayTrans50">#8041433D</color>
    <color name="darkGrayTrans25">#4041433D</color>
    <color name="lightGray">#E8EDE0</color>
    <color name="lightGrayTrans75">#BFE8EDE0</color>
    <color name="lightGreen">#1EE425</color>

    <!-- FLAT UI COLOURS -->
    <color name="lightBlueFUI">#000000</color><!-- #3498db --> <!-- COLOUR OF BUTTONS -->
    <color name="darkBlueFUI">#2980b9</color> <!-- COLOUR OF BUTTONS HOVER -->
    <color name="lightGrayFUI">#95a5a6</color>
    <color name="darkGrayFUI">#7f8c8d</color>
    <color name="darkDarkGrayFUI">#545C5C</color>
    <color name="silverFUI">#bdc3c7</color>
    <color name="lightNavyFUI">#424646</color> <!-- #34495e --> <!-- COLOUR OF SONG ITEMS -->
    <color name="darkNavyFUI">#2980b9</color> <!-- #2c3e50 --> <!-- COLOUR OF SONG ITEMS HOVER -->
    <color name="locationGrayFUI">#222525</color>
    <color name="cloudFUI">#ecf0f1</color>

    <!-- navy theme -->
    <color name="navyItemBack">#34495e</color>
    <!-- turquoise theme -->
    <color name="turquoiseItemBack">#16a085</color>
	<!-- green theme -->
	<color name="greenItemBack">#27ae60</color>
	<!-- blue theme -->
	<color name="blueItemBack">#2A7BB1</color>
</resources>
