<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/songitembackground"
    android:padding="10dp">
	
    <ImageView
        android:layout_centerVertical="true"
        android:id="@+id/albumArtSL"
        android:contentDescription="@string/album_artCD"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/jandroid"/>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toRightOf="@+id/albumArtSL"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
			<TextView
    			android:id="@+id/nameSL"
    			android:text="@string/nowPlaying"
    			android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:textStyle="bold"
    			android:textColor="@color/cloudFUI"
    			android:textSize="16sp"/>
			<TextView
			    android:id="@+id/artistSL"
			    android:text="@string/artist"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textColor="@color/cloudFUI"
			    android:textSize="12sp"/>
			<TextView
			    android:id="@+id/albumTextSL"
			    android:text="@string/album"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textColor="@color/cloudFUI"
			    android:textSize="12sp"/>
			</LinearLayout>

</RelativeLayout>
