<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:background="@color/lightNavyFUI">
	
    	<ImageView
    	    android:id="@+id/app_icon"
    	    android:contentDescription="@string/app_name"
    	    android:layout_centerHorizontal="true"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_above="@+id/app_name"
    	    android:src="@drawable/ic_launcher"/>
    
        <TextView
            android:id="@+id/app_name"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/cloudFUI"/>
        
        <TextView
            android:id="@+id/app_version"
            android:layout_below="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/app_version"
            android:textSize="14sp"
            android:textColor="@color/cloudFUI"/>
        
        <TextView android:id="@+id/app_developer"
            android:layout_below="@+id/app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/app_developer"
            android:textSize="14sp"
            android:textColor="@color/cloudFUI"/>
       

</RelativeLayout>
