<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@color/lightNavyFUI">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:id="@+id/header">  
       <RelativeLayout
	         android:layout_weight="1"
	         android:layout_width="0dp"
	         android:layout_height="match_parent">
	     	<Button
	        	android:id="@+id/songs"
	        	android:layout_width="match_parent"
	        	android:layout_height="match_parent"
	        	android:background="@drawable/dockbutton"
	        	android:onClick="songsButtonClicked"/>
	     	<ImageView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
				android:layout_centerVertical="true"
			    android:contentDescription="@string/goBackCD"
			    android:src="@drawable/ic_action_previous_item"/>
	    </RelativeLayout>
       <TextView
            android:gravity="center"
            android:layout_width="0dp"
      	   	android:layout_height="match_parent"
      	    android:layout_weight="5"
            android:text="@string/settings"
            android:textColor="@color/docktext"
            android:background="@drawable/dockbutton"
            android:textStyle="bold"
            android:singleLine="true"
            android:textSize="16sp"/>
     	<ImageView
		    android:layout_width="0dp"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:contentDescription="@string/settings"
		    android:background="@drawable/dockbutton"/> 
    </LinearLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header">
    	<RelativeLayout
    	    android:id="@+id/shuffle"
    	    android:padding="10dp" 
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content">
    	    <TextView
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:layout_alignParentLeft="true"
    	        android:layout_centerVertical="true"
    	        android:text="@string/shuffle"
    	        android:textSize="14sp"
    	        android:textColor="@color/cloudFUI"/>
    	    <CheckBox 
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:layout_alignParentRight="true"/>
    	</RelativeLayout>
    	<RelativeLayout
    	    android:id="@+id/loop"
    	    android:layout_below="@+id/shuffle"
    	    android:padding="10dp" 
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content">
    	    <TextView
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:layout_alignParentLeft="true"
    	        android:layout_centerVertical="true"
    	        android:text="@string/loop"
    	        android:textSize="14sp"
    	        android:textColor="@color/cloudFUI"/>
    	    <CheckBox 
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:layout_alignParentRight="true"/>
    	</RelativeLayout>
    	<RelativeLayout
    	    android:id="@+id/sensor"
    	    android:layout_below="@+id/loop"
    	    android:paddingTop="10dp"
    	    android:paddingLeft="10dp"
    	    android:paddingRight="10dp"
    	    android:paddingBottom="5dp" 
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content">
    	    <TextView
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:layout_alignParentLeft="true"
    	        android:layout_centerVertical="true"
    	        android:text="@string/sensorSettings"
    	        android:textSize="14sp"
    	        android:textColor="@color/cloudFUI"/>
    	    <CheckBox
    	        android:id="@+id/sensorCheckBox" 
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:layout_alignParentRight="true"/>
    	</RelativeLayout>
    	<TextView
    	        android:layout_width="match_parent"
    	        android:layout_height="wrap_content"
    	        android:paddingLeft="10dp"
    	        android:paddingRight="10dp"
    	        android:layout_below="@+id/sensor"
    	        android:textStyle="italic"
    	        android:textSize="12sp"
    	        android:textColor="@color/cloudFUI"
    	        android:text="@string/sensorDescription"/>
    </RelativeLayout>

    
    
</RelativeLayout>
